# aluraflix-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
src/: main.rs
src/application/: mod.rs
src/application/repositories/: categories.rs  mod.rs  users.rs  videos.rs
src/application/repositories/in_memory/: videos.rs
src/application/usecases/: authentication.rs  categories.rs  mod.rs  test_authentication.rs  videos.rs
src/application/usecases/___tests___/: authentication.rs
src/application/usecases/__tests__/: authentication.rs  mod.rs  videos.rs
src/domain/: mod.rs
src/domain/entities/: categories.rs  mod.rs  users.rs  videos.rs
src/domain/entities/__tests__/: categories.rs  mod.rs  users.rs  videos.rs
src/domain/errors/: app_error.rs  domain_error.rs  mod.rs
src/domain/value_objects/: color.rs  email.rs  mod.rs  unique_id.rs  url.rs
src/domain/value_objects/__tests__/: color.rs  email.rs  mod.rs  unique_id.rs  url.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/database/: mod.rs  users.rs
src/infrastructure/persistence/in_memory/: categories.rs  users.rs  videos.rs
