[package]
name = "aluraflix_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version =  "1.4.1", features = ["v7", "serde"] }
http = "0.2.9"
time = { version = "0.3.29", features = ["macros", "serde", "formatting", "parsing"] }
serde = { version = "1.0.188", features = ["derive"] }
